[workspace]
members = ["packages/*", "contracts/*", "interface", "scripts"]

[profile.release.package.moneymarket]
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true

[workspace.dependencies]
cw-orch = { version = "0.18.0" }