[package]
name = "scripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
cavern-lsd-wrapper-interface = { version = "0.1.0", path = "../../cavern-lsd-wrapper/interface" }
cavern-moneymarket-interface = { version = "0.1.0", path = "../interface" }

cw-orch = {workspace = true, features=["daemon"]}
cw-orch-fork-mock = { git="https://github.com/AbstractSDK/cw-orch-interchain", rev="7fd16b6"}
anyhow = "1.0.75"
pretty_env_logger = "0.5.0"
moneymarket = { version = "0.3.1", path = "../packages/moneymarket", features = ["interface"] }
dotenv = "0.15.0"
cosmwasm-std = "1.5.0"
log = "0.4.20"
